# qwen3-tts

./: .gitignore  Dockerfile.rocm  README.md  docker-compose.rocm.yml  pyproject.toml  qwen_tts_fast.py
api/backends/: official_qwen3_tts.py
api/static/: index.html
docs/: custom-voice-persistent.md
qwen_tts/core/models/: modeling_qwen3_tts.py
tests/: test_frontend_parity.py
