[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-tts-fast"
version = "0.1.1"
description = "Fast local Qwen3-TTS playback with a warm MLX daemon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
  "mlx-audio>=0.4.2",
  "numpy>=1.26.4",
  "sounddevice>=0.5.3",
]

[project.scripts]
qwen-tts = "qwen_tts_fast:main"

[tool.setuptools]
py-modules = ["qwen_tts_fast"]
